# AI-Learning-Assistant

./: LICENSE  README.en.md  README.md  pyproject.toml
book_agent/: __init__.py  __main__.py  config.py  db.py  ingest.py  learning_process.py  llm_settings.py  local_settings.example.py  main.py  planner.py  retrieval.py  schemas.py  section_rules.py  tutor.py
book_agent/learning_modes/: __init__.py  humanities_prompt.py  programming_prompt.py
book_agent/web/: app.js  index.html  styles.css
docs/: current_state.md  technical_design.md
tests/: test_config.py  test_learning_focus.py  test_learning_modes.py  test_llm_settings.py  test_pipeline.py  test_tutor_behavior.py  test_web_app.py
